# viso2

libviso2/: CMakeLists.txt  package.xml
libviso2/include/libviso2/: filter.h  matcher.h  viso.h  viso_mono_omnidirectional.h  viso_stereo.h
libviso2/libviso2/src/: filter.cpp  matcher.cpp  viso_mono.cpp  viso_mono_omnidirectional.cpp  viso_stereo.cpp
viso2_ros/: CMakeLists.txt  package.xml
viso2_ros/include/viso2_ros/: covariance.hpp  odometry_params.hpp  odometry_publisher.hpp  reference_frame.hpp  stereo_subscriber.hpp
viso2_ros/launch/: 2image_proc.launch.py  image_proc.launch.py
viso2_ros/src/: mono_odometer_node.cpp  mono_odometer_omnidirectional_node.cpp  stereo_odometer_node.cpp
viso2_stereo/: CMakeLists.txt  package.xml
viso2_stereo/cfg/: example.yaml
viso2_stereo/include/viso2_stereo/: covariance.hpp  odometry_params.hpp  odometry_publisher.hpp  reference_frame.hpp  stereo_subscriber.hpp
viso2_stereo/launch/: image_proc.launch.py
viso2_stereo/src/: stereo_odometer_node.cpp  visualization.cpp
